common/front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: studylinker-front
  namespace: webservice
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: studylinker
    alb.ingress.kubernetes.io/group.order: "6"

    # === ALB 전체에 적용되는 옵션들 ===
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/target-type: instance
spec:
  ingressClassName: alb
  rules:
    - host: gachon.studylink.click
      http:
        paths:
         

          # 👇 [기존] 프론트엔드 웹 서비스 (80번 포트)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: studylinker-web
                port:
                  number: 80
